# sql-odbc

./: .gitignore  CONTRIBUTING.md  DockerfileWin  MAINTAINERS.md  README.md  RELEASING.md  THIRD-PARTY  Trifork.readme.md  build_win_debug32.ps1  build_win_debug32manual.ps1  build_win_debug64.ps1  build_win_debug64manual.ps1  build_win_release32.ps1  build_win_release32manual.ps1  build_win_release64.ps1  build_win_release64manual.ps1  run_cppcheck.sh  test_output.html
.github/: CODEOWNERS  draft-release-notes-config.yml
.github/workflows/: bi-connectors.yml  draft-release-notes-workflow.yml  release-drafter.yml  sql-odbc-main.yml
bi-connectors/PowerBIConnector/: AmazonOpenSearchService.md  AmazonOpenSearchService.mez  OpenSearchProject.md  OpenSearchProject.mez  README.md  power_bi_support.md
docs/dev/: BUILD_INSTRUCTIONS.md  Pagination.md  run_tests.md
docs/test/: excel_connection.md
docs/user/: configuration_options.md  mac_configure_dsn.md  microsoft_excel_support.md  microsoft_excel_support_mac.md  windows_configure_dsn.md  windows_test_oauth.md
extensionBiConnector/: Oauth.conf  OauthConf.txt  OauthConf.xml  OpenSearchProject.pq  extensionBiConnector.query.pq
jenkins/: release.jenkinsFile
release-notes/: sql-odbc.OpenSearch.release-notes-1.5.0.0.md
scripts/: build_windows.ps1  build_windows_manual.ps1
src/: CMakeLists.txt  vcpkg.json
src/IntegrationTests/: CMakeLists.txt
src/IntegrationTests/ITODBCOauth/: CMakeLists.txt  test_odbc_Oauth.cpp
src/TestRunner/: test_runner.py
src/installer/: CMakeLists.txt  patch.xml
src/sqlodbc/: drvconn.c  (+12 more)
(+11 files in other folders)
